crates/viewer/re_dataframe_ui/tests/snapshots/filter_tests__int_all_types@Int64Type.snap
---
source: crates/viewer/re_dataframe_ui/tests/filter_tests.rs
expression: test_results
---
TestResult {
    op: IntCompares {
        operator: Eq,
        value: Some(
            3,
        ),
    },
    field: Field {
        name: "column",
        data_type: Int64,
        nullable: false,
        dict_id: 0,
        dict_is_ordered: false,
        metadata: {},
    },
    unfiltered: PrimitiveArray<Int64>
    [
      1,
      2,
      3,
      4,
      5,
    ],
    filtered: PrimitiveArray<Int64>
    [
      3,
    ],
}
